Updated the review form
And put it in Markdown

--- a/GoodBookNook/Views/Book/Index.cshtml
+++ b/GoodBookNook/Views/Book/Index.cshtml
@@ -14,10 +14,12 @@
         <h2> @book.Title </h2>
         @foreach (Author a in book.Authors)
         {
-           @a.Name; <br />
+            @a.Name; <br />
         }
+        /* One way to just show the year:
+           @:@book.PubDate.ToString("yyyy") */
 
-        @book.PubDate; <br />
+        @Html.DisplayFor(modelItem => book.PubDate)<br />
         <br />
         @if (book.Reviews.Count > 0)
         {
